Added before styling to box

--- a/3DBackgroundSquares/style.css
+++ b/3DBackgroundSquares/style.css
@@ -82,4 +82,16 @@ body {
     right: -15px;
     height: 100%;
     width: 15px;
+    transform: skewY(45deg);
+}
+
+.box::before {
+    content: '';
+    background-color: #f6e58d;
+    position: absolute;
+    top: 8px;
+    right: -15px;
+    height: 100%;
+    width: 15px;
+    transform: skewY(45deg);
 }
