--- a/3DBackgroundSquares/style.css
+++ b/3DBackgroundSquares/style.css
@@ -87,11 +87,11 @@ body {
 
 .box::before {
     content: '';
-    background-color: #f6e58d;
+    background-color: #F05454;
     position: absolute;
-    top: 8px;
-    right: -15px;
-    height: 100%;
-    width: 15px;
-    transform: skewY(45deg);
+    bottom: -15px;
+    left: 8px;
+    height: 15px;
+    width: 100%;
+    transform: skewX(45deg);
 }
